fix empty filter return, increase test coverage
Signed-off-by: Sandesh Kumar <sandeshkr419@gmail.com>